[gd_scene load_steps=16 format=3 uid="uid://c2jvgq5j7ebc3"]

[ext_resource type="Script" uid="uid://cj77etr5i62ei" path="res://Player/Player.gd" id="1_ov2po"]
[ext_resource type="Script" uid="uid://by5ju0njlbgdl" path="res://Player/Grab.gd" id="2_oh578"]
[ext_resource type="Script" uid="uid://c7cxbf6kkp0bs" path="res://Gravity/GravityListener.gd" id="2_xpxqn"]
[ext_resource type="Script" uid="uid://cuyyeyb83qhkn" path="res://Player/Cameras.gd" id="3_ddoul"]
[ext_resource type="Script" uid="uid://cse5p1f85v7sq" path="res://Player/SoundController.gd" id="5_8g4oa"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ofuvd"]
friction = 0.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bt4at"]
height = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_t5vjn"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_asvnu"]
height = 3.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gmaph"]
height = 0.1

[sub_resource type="AudioEffectReverb" id="AudioEffectReverb_8g4oa"]
room_size = 0.0

[sub_resource type="AudioEffectReverb" id="AudioEffectReverb_6ysni"]
room_size = 0.5

[sub_resource type="AudioEffectPitchShift" id="AudioEffectPitchShift_vlldt"]

[sub_resource type="AudioEffectPitchShift" id="AudioEffectPitchShift_s1rgi"]
pitch_scale = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_kmg4d"]
size = Vector3(0.1, 0.1, 1)

[node name="Player" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
collision_layer = 2
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_ofuvd")
lock_rotation = true
script = ExtResource("1_ov2po")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
gi_mode = 2
mesh = SubResource("CapsuleMesh_bt4at")

[node name="GravityListener" type="Area3D" parent="."]
script = ExtResource("2_xpxqn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GravityListener"]
shape = SubResource("SphereShape3D_t5vjn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("CylinderShape3D_asvnu")

[node name="onFloorArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0)
collision_layer = 0
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="onFloorArea"]
shape = SubResource("CylinderShape3D_gmaph")

[node name="Node" type="Node" parent="." node_paths=PackedStringArray("gravity_listener")]
script = ExtResource("5_8g4oa")
gravity_listener = NodePath("../GravityListener")
effects = Array[Dictionary]([{
"from": SubResource("AudioEffectReverb_8g4oa"),
"keys": ["room_size"],
"to": SubResource("AudioEffectReverb_6ysni")
}, {
"from": SubResource("AudioEffectPitchShift_vlldt"),
"keys": ["pitch_scale"],
"to": SubResource("AudioEffectPitchShift_s1rgi")
}])

[node name="Neck" type="Node3D" parent="."]

[node name="SubNeck" type="Node3D" parent="Neck"]
script = ExtResource("3_ddoul")

[node name="Interaction" type="Node3D" parent="Neck/SubNeck"]
script = ExtResource("2_oh578")

[node name="InteractRayCast" type="RayCast3D" parent="Neck/SubNeck/Interaction"]
transform = Transform3D(1, 0, 0, 0, -6.55671e-08, -1.5, 0, 1, -4.37114e-08, 0, 0, -0.530777)
target_position = Vector3(0, -3, 0)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="GrabMarker" type="Marker3D" parent="Neck/SubNeck/Interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Neck/SubNeck/Interaction/GrabMarker"]
visible = false
mesh = SubResource("BoxMesh_kmg4d")

[node name="Camera" type="Camera3D" parent="Neck/SubNeck"]
unique_name_in_owner = true
current = true
fov = 80.0

[node name="CameraBack" type="Camera3D" parent="Neck/SubNeck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/CanvasLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
